# fiat-checkout-manager

./: Cargo.toml  LICENSE
operations/: Dockerfile
src/: lib.rs  main.rs
src/models/: checkout_session.rs  create_checkout.rs  create_payment.rs  mod.rs  payment_intent.rs
src/queue/: checkout_session_producer.rs  create_checkout_consumer.rs  create_payment_consumer.rs  mod.rs  payment_producer.rs
src/queue_consumers/: create_checkout.rs  mod.rs
src/services/: mod.rs  price_feed.rs  stripe.rs  ticket_purchase.rs
src/utils/: config.rs  store.rs
