[package]
name = "fiat-checkout-manager"
version = "0.1.1"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
async-trait = "0.1.56"
borsh = "0.9.3"
dotenv = "0.15"
eyre = "0.6.8"
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.1.8" }
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.13"  }
common-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.27"  }
lapin = "2.1.1"
tracing = "0.1.19"
tracing-subscriber = "0.3.16"
