[package]
name = "fiat-checkout-manager"
version = "0.1.5"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
async-trait = "0.1.56"
async-stripe = { version = "0.15.0", features = ["runtime-tokio-hyper", "checkout", "connect"] }
borsh = "0.9.3"
chrono = "0.4.21"
dotenv = "0.15"
eyre = "0.6.8"
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.1.9" }
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.13"  }
common-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.36"  }
ticketland-event-handler = { git = "https://github.com/ticketland-io/ticketland-event-handler", version = "0.1.11" }
program-artifacts = { git = "https://github.com/ticketland-io/program-artifacts", version = "0.1.27" }
price-feed = { git = "https://github.com/ticketland-io/price-feed", version = "0.1.1" }
solana-web3-rust = { git = "https://github.com/ticketland-io/solana-web3-rust", version = "0.1.10" }
tokio = { version = "1.14.1" }
lapin = "2.1.1"
tracing = "0.1.19"
tracing-subscriber = "0.3.16"
serde = "1.0"
solana-sdk = "1.11.10"
solana-client = "1.11.10"
