[package]
name = "fiat-checkout-manager"
version = "0.2.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
async-trait = "0.1.56"
async-stripe = { version = "0.15.0", features = ["runtime-tokio-hyper", "checkout", "connect"] }
borsh = "0.9.3"
chrono = "0.4.21"
dotenv = "0.15"
eyre = "0.6.8"
ticketland-api = { git = "https://github.com/ticketland-io/ticketland-api", branch = "feat/sui", version = "0.2.0"  }
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.4.3" }
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.0" }
ticketland-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.0" }
ticketland-event-handler = { git = "https://github.com/ticketland-io/ticketland-event-handler", branch = "feat/sui", version = "0.2.0" }
price-feed = { git = "https://github.com/ticketland-io/price-feed", version = "0.1.3" }
tokio = { version = "1.14.1" }
lapin = "2.1.1"
tracing = "0.1.19"
tracing-subscriber = "0.3.16"
serde = "1.0.0"
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "9588990" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "9588990" }
